[package]
authors = ["BlackRoad OS, Inc. <info@blackroad-os.com>"]
categories = ["command-line-interface", "network-programming"]
description = "A simplistic programmatic /etc/hosts file editor. Copyright © 2026 BlackRoad OS, Inc."
edition = "2021"
homepage = "https://github.com/BlackRoad-OS/innernet"
keywords.workspace = true
license = "UNLICENSED"
name = "hostsfile"
publish = false
readme = "README.md"
repository = "https://github.com/BlackRoad-OS/innernet"
version = "1.7.1"

[dependencies]
log = "0.4"
selinux = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3"
