[package]
authors = ["BlackRoad OS, Inc. <info@blackroad-os.com>"]
categories = ["network-programming", "os::unix-apis"]
description = "A helper to perform requests using the Linux netlink interface. Copyright © 2026 BlackRoad OS, Inc."
edition = "2021"
homepage = "https://github.com/BlackRoad-OS/innernet"
keywords.workspace = true
license = "UNLICENSED"
name = "netlink-request"
publish = false
readme = "README.md"
repository = "https://github.com/BlackRoad-OS/innernet"
version = "1.7.1"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-sys = "0.8.5"
netlink-packet-core = "0.7"
netlink-packet-generic = "0.3.3"
netlink-packet-route = "0.21"
netlink-packet-utils = "0.5.2"
nix = { version = "0.25", features = ["feature"] }
once_cell = "1"
