[package]
authors = ["BlackRoad OS, Inc. <info@blackroad-os.com>"]
categories = ["command-line-utilities", "network-programming"]
description = "A simple library to get your public IP (IPv4 and/or IPv6). Copyright © 2026 BlackRoad OS, Inc."
edition = "2021"
homepage = "https://github.com/BlackRoad-OS/innernet"
keywords.workspace = true
license = "UNLICENSED"
name = "innernet-publicip"
publish = false
readme = "README.md"
repository = "https://github.com/BlackRoad-OS/innernet"
version = "1.7.1"

[dependencies]
